# StockPulse

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
api/: .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.scripts.json
api/scripts/: migrate.ts
api/src/: server.ts
api/src/adapters/db/: pool.ts
api/src/config/: env.ts
api/src/domains/auth/: repository.ts  routes.ts  schemas.ts  service.ts
api/src/plugins/: cors.ts  jwt.ts
db/migrations/: 001_create_users.sql  002_create_stocks.sql  002_create_stocks_cn.sql  003_create_daily_cn.sql  004_create_trade_cal_cn.sql  005_create_adj_factor_cn.sql  006_create_daily_basic_cn.sql  007_create_stk_limit_cn.sql  008_create_moneyflow_cn.sql  009_create_daily_picks.sql
db/sql/: verify_daily_cn.sql
docs/: naming-conventions.md
engine/: pyproject.toml
engine/compute/: adjust.py  indicators.py
engine/ingestion/: adj_factor_cn.py  base.py  daily_basic_cn.py  daily_cn.py  moneyflow_cn.py  stk_limit_cn.py  stocks_cn.py  trade_cal_cn.py
engine/lib/: config.py  db.py
engine/lib/tushare/: client.py
engine/screener/: base.py  breakout.py  limit_up.py  macd_cross.py  moneyflow.py  pullback.py  runner.py
engine/server/: main.py
engine/tests/: test_breakout.py  test_limit_up.py  test_macd_cross.py  test_moneyflow.py  test_pullback.py
web/: components.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/auth/: guest-route.tsx  protected-route.tsx
web/src/components/layout/: app-header.tsx  app-layout.tsx  app-sidebar.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  (+4 more)
web/src/lib/: nav.ts
web/src/pages/: dashboard.tsx  home.tsx  login.tsx  placeholder.tsx  register.tsx
web/src/router/: index.tsx
web/src/store/: auth.ts
(+2 files in other folders)
