[project]
name = "stockpulse-engine"
version = "0.1.0"
description = "StockPulse data engine: A-share market data ingestion."
requires-python = ">=3.12"
dependencies = [
    "tushare>=1.4.0",
    "asyncpg>=0.30.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
