[project]
name = "stockpulse-engine"
version = "0.1.0"
description = "StockPulse data engine: A-share market data ingestion."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.0",
    "tushare>=1.4.0,<2.0.0",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "pandas-ta-classic>=0.5.44",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["."] 

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I"] 

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
